--- a/IKSnet/Views/Kontrolle/Index.cshtml
+++ b/IKSnet/Views/Kontrolle/Index.cshtml
@@ -71,7 +71,7 @@
                 @Html.DisplayFor(modelItem => item.Organisationseinheit.Bezeichnung)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Risiko.ID)
+                @Html.DisplayFor(modelItem => item.Risiko.Titel)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Start)
