--- a/IKSnet/Views/Kontrolle/Details.cshtml
+++ b/IKSnet/Views/Kontrolle/Details.cshtml
@@ -112,7 +112,7 @@
 
         <div class="panel-body">
             <p>
-                @Html.ActionLink("Neue Aufgabe erfassen", "Create", "Kontrolle")
+                @Html.ActionLink("Neue Aufgabe erfassen", "Create", "Aufgabe", new { id=Model.ID }, null)
             </p>
             <table class="table table-hover">
                 <thead class="thead-light">
