--- a/IKSnet/Views/Prozessaktivitaet/Details.cshtml
+++ b/IKSnet/Views/Prozessaktivitaet/Details.cshtml
@@ -63,7 +63,7 @@
 
         <div class="panel-body">
             <p>
-                @Html.ActionLink("Neues Risiko erfassen", "Create", "Risiko")
+                @Html.ActionLink("Neues Risiko erfassen", "Create", "Risiko", new { id=Model.ID }, null)
             </p>
             <table class="table table-hover">
                 <thead class="thead-light">
