--- a/IKSnet/Views/Risiko/Details.cshtml
+++ b/IKSnet/Views/Risiko/Details.cshtml
@@ -89,7 +89,7 @@
 
         <div class="panel-body">
             <p>
-                @Html.ActionLink("Neue Kontrolle erfassen", "Create", "Kontrolle")
+                @Html.ActionLink("Neue Kontrolle erfassen", "Create", "Kontrolle", new { id=Model.ID }, null)
             </p>
             <table class="table table-hover">
                 <thead class="thead-light">
