--- a/IKSnet/Views/Organisationseinheit/Delete.cshtml
+++ b/IKSnet/Views/Organisationseinheit/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IKSnet.Models.Organisationseinheit
 
 @{
-    ViewBag.Title = "Organisationseinheit löschen"
+    ViewBag.Title = "Organisationseinheit löschen";
 }
 
 <div class="panel panel-primary">
