view home & view controller aufgabe

--- a/IKSnet/Views/Aufgabe/Edit.cshtml
+++ b/IKSnet/Views/Aufgabe/Edit.cshtml
@@ -87,7 +87,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Dokument, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Dokument, new { htmlAttributes = new { @class = "form-control"} })
+                @Html.EditorFor(model => model.Dokument, new { htmlAttributes = new { @class = "form-control", @readonly = "true"} })
                 @Html.ValidationMessageFor(model => model.Dokument, "", new { @class = "text-danger" })
             </div>
         </div>
