--- a/IKSnet/Views/Aufgabe/ErledigtIndex.cshtml
+++ b/IKSnet/Views/Aufgabe/ErledigtIndex.cshtml
@@ -91,8 +91,11 @@
                 <td>
                     @Html.ActionLink("Mutieren", "Edit", new { id = item.ID }) |
                     @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-                    @Html.ActionLink("Löschen", "Delete", new { id = item.ID })
-                </td>
+                    @if (User.IsInRole("Administrator") || User.IsInRole("IKS-Manager"))
+                    {
+                        @Html.ActionLink("Löschen", "Delete", new { id = item.ID })
+                    }
+                    </td>
             </tr>
                     }
 
