--- a/IKSnet/Views/Dokument/Index.cshtml
+++ b/IKSnet/Views/Dokument/Index.cshtml
@@ -10,7 +10,8 @@
 
     <div class="panel-body">
         <p>
-            @Html.ActionLink("Neues Dokument hinzufügen", "Create")
+            @Html.ActionLink("Neues Dokument hinzufügen", "Create") |
+            @Html.ActionLink("Archivierte Dokumente anzeigen", "ErledigtIndex")
         </p>
         <table class="table table-hover">
             <thead class="thead-light">
