Temp Data Message

--- a/IKSnet/Views/Shared/_Layout.cshtml
+++ b/IKSnet/Views/Shared/_Layout.cshtml
@@ -168,7 +168,7 @@ desired effect
             <!-- To the right -->
             <div class="pull-right hidden-xs">
                 <div class="alert-info col col-sm-12 col-lg-12 col-md-12">
-                    @ViewBag.Message
+                    @TempData["message"]
                 </div>
             </div>
             <!-- Default to the left -->
