--- a/IKSnet/Views/Prozessaktivitaet/Edit.cshtml
+++ b/IKSnet/Views/Prozessaktivitaet/Edit.cshtml
@@ -45,7 +45,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.ProzessID, "ProzessID", htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.ProzessID, "Prozess", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.DropDownList("ProzessID", null, htmlAttributes: new { @class = "form-control" })
                         @Html.ValidationMessageFor(model => model.ProzessID, "", new { @class = "text-danger" })
